force-app/main/default/objects/Form_Response__c/Form_Response__c.object-meta.xml
<CustomObject>
    <description>A single flexible object that stores every form submission. Key fields (name, email, phone, subject) are mapped explicitly; the full answer set is kept as JSON in Response_Data__c. An after-insert Apex trigger explodes that JSON into child Form_Answer__c rows so every answer is reportable.</description>
    <label>Form Response</label>
    <nameField>
        <displayFormat>FR-{00000}</displayFormat>
        <label>Form Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>