force-app/main/default/objects/Form_Response__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Person Account</label>
    <description>The Person Account created/updated from this submission (when the form has Create Person Account enabled).</description>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Form Responses</relationshipLabel>
    <relationshipName>Form_Responses</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>