force-app/main/default/objects/Form_Response__c/fields/AI_Findings__c.field-meta.xml
<CustomField>
    <fullName>AI_Findings__c</fullName>
    <label>AI Findings</label>
    <description>The AI review summary and any missing/required items.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>