force-app/main/default/objects/Form_Response__c/fields/AI_Reviewed_At__c.field-meta.xml
<CustomField>
    <fullName>AI_Reviewed_At__c</fullName>
    <label>AI Reviewed At</label>
    <type>DateTime</type>
</CustomField>