force-app/main/default/objects/Form_Response__c/fields/AI_Status__c.field-meta.xml
<CustomField>
    <fullName>AI_Status__c</fullName>
    <label>AI Status</label>
    <description>Result of the AI review of this submission.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Needs_Info</fullName><default>false</default><label>Needs Info</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>