force-app/main/default/objects/Form_Response__c/fields/Authority_Code__c.field-meta.xml
<CustomField>
    <fullName>Authority_Code__c</fullName>
    <label>Authority Code</label>
    <description>The response's authority code (from Authority). Used by the restriction rule to isolate data per authority.</description>
    <type>Text</type>
    <formula>IF(ISBLANK(Authority__r.Code__c), &apos;&apos;, Authority__r.Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlanks</formulaTreatBlanksAs>
</CustomField>