force-app/main/default/objects/Form_Response__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <description>The Case opened for this response when it was handed off to the municipal service desk. Empty until handoff; used to prevent double-handoff.</description>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Form Responses</relationshipLabel>
    <relationshipName>Form_Responses</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>