force-app/main/default/objects/Form_Response__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Mapped key field: respondent email.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>