force-app/main/default/objects/Form_Response__c/fields/External_Case_Ref__c.field-meta.xml
<CustomField>
    <fullName>External_Case_Ref__c</fullName>
    <label>External Case Ref</label>
    <description>Reference id of the case in the external municipal service-desk Salesforce org (the call-center module handles the case there). Populated by the outbound handoff integration.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>