force-app/main/default/objects/Form_Response__c/fields/Form_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Form_External_Id__c</fullName>
    <description>External identifier / slug of the form (from the form-builder).</description>
    <externalId>true</externalId>
    <label>Form External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>