force-app/main/default/objects/Form_Response__c/fields/Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Name__c</fullName>
    <description>Human-readable name of the form this response came from.</description>
    <label>Form Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>