force-app/main/default/objects/Form_Response__c/fields/Identity_Verified__c.field-meta.xml
<CustomField>
    <fullName>Identity_Verified__c</fullName>
    <label>Identity Verified</label>
    <description>True when the applicant authenticated via the national identity system (הזדהות לאומית) before submitting. Set by the SSO flow once wired; false for anonymous submissions.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>