force-app/main/default/objects/Form_Response__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Mapped key field: respondent phone.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>