force-app/main/default/objects/Form_Response__c/fields/Respondent_Name__c.field-meta.xml
<CustomField>
    <fullName>Respondent_Name__c</fullName>
    <description>Mapped key field: respondent full name.</description>
    <label>Respondent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>