force-app/main/default/objects/Form_Response__c/fields/Response_Data__c.field-meta.xml
<CustomField>
    <fullName>Response_Data__c</fullName>
    <description>Full set of submitted answers as a JSON object. Source of truth for all answers; the after-insert trigger flattens it into Form_Answer__c rows.</description>
    <label>Response Data (JSON)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>