force-app/main/default/objects/Form_Response__c/fields/SLA_Due__c.field-meta.xml
<CustomField>
    <fullName>SLA_Due__c</fullName>
    <label>SLA Due</label>
    <type>DateTime</type>
</CustomField>