force-app/main/default/objects/Form_Response__c/fields/Source_IP__c.field-meta.xml
<CustomField>
    <fullName>Source_IP__c</fullName>
    <description>Originating IP address of the submission (security/audit).</description>
    <label>Source IP</label>
    <length>45</length>
    <type>Text</type>
</CustomField>