force-app/main/default/objects/Form_Response__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Mapped key field: subject / topic of the submission.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>