force-app/main/default/objects/Form_Response__c/fields/Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>Submitted_At__c</fullName>
    <description>Timestamp of the submission.</description>
    <label>Submitted At</label>
    <type>DateTime</type>
</CustomField>