force-app/main/default/objects/Form_Response__c/fields/Tenant_Code__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Code__c</fullName>
    <label>Tenant Code</label>
    <description>Stamped authority code (from the form's authority) used by the restriction rule for per-authority isolation. Restriction rules do not support formula fields, so this is a real stamped field.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>