force-app/main/default/objects/Form_Response__c/fields/Update_Requested__c.field-meta.xml
<CustomField>
    <fullName>Update_Requested__c</fullName>
    <label>Update Requested</label>
    <description>Set when the AI agent has asked the applicant to complete missing items.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>