force-app/main/default/objects/Form_Response__c/fields/Update_Token__c.field-meta.xml
<CustomField>
    <fullName>Update_Token__c</fullName>
    <label>Update Token</label>
    <description>One-time token for the applicant's secure "complete missing items" link (AI outreach).</description>
    <type>Text</type>
    <length>64</length>
    <externalId>true</externalId>
</CustomField>